@@ -66,6 +66,7 @@ Bug fixes
  * Fix issue where queryset annotations were lost (e.g. ``.annotate_score()``) when using specific models in page query (Dan Bentley)
  * Prevent date/time picker from losing an hour on losing focus when 12-hour times are in use (Jacob Topp-Mugglestone)
  * Strip out HTML tags from ``RichTextField`` & ``RichTextBlock`` search index content (Timothy Bautista)
+ * Avoid using null on string ``Site.site_name`` blank values to avoid different values for no name (Coen van der Kamp)
 
 
 Upgrade considerations
